[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "data-cleaning-env"
version = "1.0.0"
description = "OpenEnv-compliant data cleaning environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "openai>=1.30.1",
    "pyyaml>=6.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.urls]
"Homepage" = "https://huggingface.co/spaces/kushpuri07/data-cleaning-env"
